--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -104,167 +104,117 @@ input{
     margin-left: auto;
     margin-right: auto;
 }
-
-
 // début menu burger
-#country:link {
-    text-decoration: none;
-    color: white;
-}
-#country:visited {
-    text-decoration: none;
-    color:white;
+#menuToggle{
 
-}
-
-ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-li{
-    margin: 2rem;
-    padding: 1.5rem;
-    text-align: center;
-    box-sizing: border-box;
-}
-// .burger {
-//     display: block;
-//     margin: 0 auto;
-//     width: 100%;
-//     max-width: 5%;
-//     box-shadow: none;
-//     background-color: #fff;
-//     position: fixed;
-//     height: 60px!important;
-//     overflow: hidden;
-//     // z-index: 0;
-// }
-.main {
-    margin: 0 auto;
     display: block;
-    height: 100%;
-    margin-top: 60px;
+    position: relative;
+    top: -120px;
+    left: 10px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
 }
-.mainInner{
-    display: table;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-}
-.mainInner div{
-    display:table-cell;
-    vertical-align: middle;
-    font-size: 3em;
-    font-weight: bold;
-    letter-spacing: 1.25px;
-}
-// #sidebarMenu {
-//     height: 50%;
-//     z-index: 3;
-//     position: relative;
-//     left: 0;
-//     width: 100%;
-//     transform: translateX(-100%);
-//     transition: transform 250ms ease-in-out;
-//     background: linear-gradient(180deg, #a79f98 0%, #a79f98 100%);
-// }
-// .sidebarMenuInner{
-//     margin:0;
-//     padding:0;
-//     border-top: 1px solid rgba(255, 255, 255, 0.10);
-// }
-// .sidebarMenuInner li{
-//     list-style: none;
-//     color: #fff;
-//     text-transform: uppercase;
-//     font-weight: bold;
-//     padding: 20px;
-//     cursor: pointer;
-//     border-bottom: 1px solid rgba(255, 255, 255, 0.10);
-// }
-// .sidebarMenuInner li span{
-//     display: block;
-//     font-size: 14px;
-//     color: rgba(255, 255, 255, 0.50);
-// }
-// .sidebarMenuInner li a{
-//     color: #fff;
-//     text-transform: uppercase;
-//     font-weight: bold;
-//     cursor: pointer;
-//     text-decoration: none;
-// }
-// input[type="checkbox"]:checked ~ #sidebarMenu {
-//     transform: translateX(0);
-// }
 
-// input[type=checkbox] {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     display: none;
-// }
-// .sidebarIconToggle {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     cursor: pointer;
-//     position: absolute;
-//     z-index: 3;
-//     height: 100%;
-//     width: 100%;
-//     top: 20px;
-//     left: 15px;
-//     height: 22px;
-//     width: 22px;
-// }
-// .spinner {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     position: absolute;
-//     height: 3px;
-//     width: 100%;
-//     background-color: #A79F98;
-//     border-radius: 6px;
-// }
-// .horizontal {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     position: relative;
-//     float: left;
-//     margin-top: 3px;
-// }
-// .diagonal.part-1 {
-//     position: relative;
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     float: left;
-// }
-// .diagonal.part-2 {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     position: relative;
-//     float: left;
-//     margin-top: 3px;
-// }
-// input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     opacity: 0;
-// }
-// input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     transform: rotate(135deg);
-//     margin-top: 12px;
-// }
-// input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
-//     transition: all 0.3s;
-//     box-sizing: border-box;
-//     transform: rotate(-135deg);
-//     margin-top: -9px;
-// }
+#menuToggle a{
+    text-decoration: none;
+    color: #a59f96;
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover{
+    color:#4e2780;
+}
+
+#menuToggle input{
+    display: block;
+    width: 30px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+}
+/*
+* Just a quick hamburger
+*/
+#menuToggle span{
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background:#bbb7b0;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    opacity 0.55s ease;
+}
+
+#menuToggle span:first-child{
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2){
+    transform-origin: 0% 100%;
+}
+/* 
+* Transform all the slices of hamburger
+* into a crossmark.
+*/
+#menuToggle input:checked ~ span{
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #b4a58c;
+}
+/*
+* But let's hide the middle one.
+*/
+#menuToggle input:checked ~ span:nth-last-child(3){
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+/*
+* Ohyeah and the last one should go the other direction
+*/
+#menuToggle input:checked ~ span:nth-last-child(2){
+    transform: rotate(-45deg) translate(0, -1px);
+}
+/*
+* Make this absolute positioned
+* at the top left of the screen
+*/
+#menu{
+    position: absolute;
+    width: 300px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    background: #ffffff;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+/* to stop flickering of text in safari */
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li{
+    padding: 10px 0;
+    font-size: 1.5rem;
+    text-align:left;
+}
+/*
+* And let's slide it in from the left
+*/
+#menuToggle input:checked ~ ul{
+  transform: none;
+}
 // fin menu burger
 .country_image{
     width: 100%;
@@ -278,8 +228,10 @@ a {
     font-size: 1em;
 }
 .media-body{
-    font-size:2em;
+
+    font-size:1em;
 }
+
 .button{
     font-size:1.5em;
 }
@@ -294,7 +246,6 @@ a {
     bottom: 0;
     width: 100%;
 }
-
 
 .iconbar img{
     display: inline-block;
