--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -6,12 +6,8 @@
 
 </style>
 
-<div class="media">
-  <div class="media-body">
-    <ul>
-      <li>{{ country.name }}</li>
-    </ul>
-  </div>
+<div class="media-body">
+    <h1>{{ country.name }}</h1>
 </div>
 
 <img class="country_image" src="{{ country.image }}">
