--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,6 @@
     <header class="header">
         <p class="slogan">Grow up and live new experiences</p>
 
-        {# <li><a href="{{ path('home') }}">Home</a></li>
     <div id="openModal" class="modalDialog">
         <div>
             <h3>This application has TCU</h3>
@@ -15,25 +14,25 @@
         </div>
     </div>
 
-    <div class="burger"></div>
-    <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-    <label for="openSidebarMenu" class="sidebarIconToggle">
-      <div class="spinner diagonal part-1"></div>
-      <div class="spinner horizontal"></div>
-      <div class="spinner diagonal part-2"></div>
-    </label>
-    <div id="sidebarMenu">
-      <ul class="sidebarMenuInner">
-        <li><a href="{{ path('home') }}">Home</a></li>
-        <li><a href="https://neoma-bs.fr/" target="_blank">Neoma BS</a></li>
-        <li>{% if app.user %}
-                 {{ app.user.email }}
-                 <a href="{{ path('app_logout') }}"> Logout</a>
-            {% else %}
-                <a href="{{ path('app_login') }}"> Login</a>
-            {% endif %}</li> #}
+<nav role="navigation">
+  <div id="menuToggle">
+    <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      <ul id="menu">
+          <li><a href="{{ path('home') }}">Home</a></li>
+          <li><a href="https://neoma-bs.fr/" target="_blank">Neoma BS</a></li>
+          <li>{% if app.user %}
+              {{ app.user.email }}
+            <a href="{{ path('app_logout') }}"> Logout</a>
+              {% else %}
+            <a href="{{ path('app_login') }}"> Login</a>
+              {% endif %}</li>
+      </ul>
+  </div>
+</nav>
       
-    
     <a href="{{path('app_login')}}"><img class="avatar" src="{{ asset('build/images/login.png') }}" alt=""></a>
 
     <div id="mapid"></div>
