--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -49,13 +49,24 @@ form>input{
     margin-bottom: 5%;
     text-align: left;
     font-size: 1.3rem;
-    border: 1px solid;
+    border-radius: 30px;
+    box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
 }
-form>button{
+.sign{
     margin-left: 39%;
+    border-radius: 50px;
+    box-shadow: inset 20px 20px 60px #bebebe,
+            inset -20px -20px 60px #ffffff;
+    display: grid;
+    margin: auto;  
+    width: 70%; 
+    height: 3rem; 
+    font-size: 1.2rem;   
+    padding-top: 0.5rem;  
+    cursor: pointer;
 }
 .registration{
-    margin-left: 5rem;
     margin-top: 5rem;
 }
 // Fin Formulaire Login
@@ -73,8 +84,6 @@ input{
     width: 70%;
     height: 3em;
     font-size: 1.3rem;
-    border: 1px solid;
-    border-color: rgb(107, 107, 114);
 }
 .btn{
     display: grid;
