--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -62,32 +62,33 @@ form>button{
 
 // Début formulaire Register
 .register_form>h1{
-    margin-top: 20%;
-    margin-bottom: 5%;
+    margin-top: 15%;
+    margin-bottom: 15%;
     text-align: center;
 }
 input{
     display: grid;
     margin: auto;
-    margin-bottom: 5%;
     width: 70%;
-    height: 3em;
+    height: 2rem; 
+    margin-bottom: 5%;
+    text-align: left;
     font-size: 1.3rem;
-    border: 1px solid;
-    border-color: rgb(107, 107, 114);
+    border-radius: 30px;
+    box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
 }
 .btn{
-    display: grid;
-    margin: auto;
-    margin-top: 10%;
-    color: white;
-    background-color: rgb(107, 107, 114);
-    border-radius: 10px;
-    width: 70%;
-    height: 3.5em;
-    border-color: gb(107, 107, 114);
-    font-size: 1.3rem;  
-    border: solid;
+    margin-top: 1.5rem;
+    border-radius: 50px;
+    box-shadow: inset 20px 20px 60px #bebebe,
+            inset -20px -20px 60px #ffffff;
+    left: 0;
+    right: 0;
+    width: 40%; 
+    height: 3rem; 
+    font-size: 1.2rem;     
+    cursor: pointer;
 }
 // Fin formulaire Register
 
