--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -35,8 +35,9 @@ body {
 
 // Début Formulaire Login
 form>h1{
-    margin-top: 10%;
-    margin-bottom: 5%;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    text-align: center;
 }
 label{
     display: grid;
@@ -46,24 +47,25 @@ label{
 form>input{
     display: grid;
     margin: auto;
+    width: 70%;
+    height: 2rem; 
     margin-bottom: 5%;
-    text-align: left;
+    text-align: center;
     font-size: 1.3rem;
     border-radius: 30px;
     box-shadow:  20px 20px 60px #bebebe,
                 -20px -20px 60px #ffffff;
 }
 .sign{
-    margin-left: 39%;
+    margin-top: 1.5rem;
     border-radius: 50px;
     box-shadow: inset 20px 20px 60px #bebebe,
             inset -20px -20px 60px #ffffff;
-    display: grid;
-    margin: auto;  
-    width: 70%; 
+    left: 0;
+    right: 0;
+    width: 40%; 
     height: 3rem; 
-    font-size: 1.2rem;   
-    padding-top: 0.5rem;  
+    font-size: 1.2rem;     
     cursor: pointer;
 }
 .registration{
