--- a/templates/cost/show.html.twig
+++ b/templates/cost/show.html.twig
@@ -2,6 +2,27 @@
 
 
 {% block body %}
+<nav role="navigation">
+  <div id="menuToggle">
+    <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      <ul id="menu">
+          <li><a href="{{ path('home') }}">Home</a></li>
+          <li><a href="{{ path('home') }}">Social Networks</a></li>
+          <li><a href="{{ path('cgu') }}">Settings</a></li>          
+          <li><a href="https://neoma-bs.fr/" target="_blank">About us</a></li>
+          <li>{% if app.user %}
+              {{ app.user.email }}
+            <a href="{{ path('app_logout') }}"> Logout</a>
+              {% else %}
+            <a href="{{ path('app_login') }}"> Login</a>
+              {% endif %}</li>
+      </ul>
+  </div>
+</nav>
+
 <div class="cost">
 <h1>Costs</h1>
     <p>The average cost in this country during a trip for :</p>
