--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,14 +7,15 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-<form class="register_form">
+
     <h1>Register</h1>
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
-</form>
+        {{ form_row(registrationForm.agreeTerms) }}
+        <a href="{{ path ('cgu')}}">Show more TCU</a>
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
