--- a/templates/opinion/new.html.twig
+++ b/templates/opinion/new.html.twig
@@ -4,10 +4,6 @@
 
 {% block body %}
     <h1>Share your experience !</h1>
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type='submit' value='Add my opinion'>
-    {{ form_end(form) }}
+    {{ include ('opinion/_form.html.twig')}}
 
 {% endblock %}
