fix: edit color and css of nabvar foot

--- a/templates/cgu/index.html.twig
+++ b/templates/cgu/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-
+<div class="cgu">
 <h1>Terms and Conditions of Use</h1>
 
 <h3>Purpose of the document</h3>
@@ -44,7 +44,7 @@ servers, or any other event beyond its control. We may by
 otherwise interrupt, suspend or modify temporarily and without prior notice access to the
 service, in particular for security reasons, for the restructuring of resource
 machine, for the maintenance or improvement of the platform</p>
-
+</div>
 
 
 
