--- a/templates/university/show.html.twig
+++ b/templates/university/show.html.twig
@@ -7,7 +7,7 @@
 
     <img src="{{ university.image }}">
      
-    <p>Adress : {{ university.description }}</p>
+    <p>{{ university.description }}</p>
 
     <a href="{{ path('home') }}">Retour</a>
 {% endblock %}
