fix : template register

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,7 +15,7 @@
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
-        <a href="{{ path ('cgu')}}">Show more TCU</a>
+        <a href="{{ path ('cgu')}}">Show more TCU</a><br>
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
