--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,7 @@
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
+        {{ form_row(registrationForm.name)}}
         {{ form_row(registrationForm.agreeTerms) }}
         <a href="{{ path ('cgu')}}">Show more TCU</a><br>
         <button type="submit" class="btn">Register</button>
