feat: add bottom bar on this pages

--- a/templates/university/show.html.twig
+++ b/templates/university/show.html.twig
@@ -9,5 +9,5 @@
      
     <p>{{ university.description }}</p>
 
-    <a href="{{ path('home') }}">Retour</a>
+    <a href="{{ path('home') }}">Back</a>
 {% endblock %}
