--- a/templates/opinion/show.html.twig
+++ b/templates/opinion/show.html.twig
@@ -27,7 +27,7 @@
 <h2>All the advices</h2>
     <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_advice.png') }}" />
 {% for opinion in opinions %}
-    <p>{{ user.name }}  : "{{ opinion.advice }}"   </p>
+    <p>"{{ opinion.advice }}"</p>
 {%  endfor %}
     <h2>All the interviews</h2>
     <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_interview.png') }}" />
