--- a/templates/cgu/index.html.twig
+++ b/templates/cgu/index.html.twig
@@ -3,6 +3,30 @@
 {% block title %}Terms and Conditions of Use{% endblock %}
 
 {% block body %}
+<nav role="navigation">
+  <div id="menuToggle">
+    <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+      <ul id="menu">
+      <div class="borderburger">
+      </div>
+        <li><a href="{{ path('home') }}"><img class="logoburger" src="{{ asset('build/images/logo.png') }}"></a></li>
+      <div class="borderburger2">{% if app.user %} {{app.user.name}} {% endif %}</div>
+
+          <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/home.png') }}">Home</a></li>
+          <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/social.png') }}">Social Networks</a></li>
+          <li><a href="{{ path('cgu') }}"><img class="imgburger" src="{{ asset('build/images/parameter.png') }}">Settings</a></li>          
+          <li><a href="https://neoma-bs.fr/" target="_blank"><img class="imgburger" src="{{ asset('build/images/more.png') }}">About us</a></li>
+          <li>{% if app.user %}
+            <a href="{{ path('app_logout') }}"><img class="imgburger" src="{{ asset('build/images/logout.png') }}">Logout</a>
+              {% else %}
+            <a href="{{ path('app_login') }}"><img class="imgburger" src="{{ asset('build/images/logout.png') }}"> Login</a>
+              {% endif %}</li>
+      </ul>
+  </div>
+</nav>
 
 <div class="cgu">
 <h1>Terms and Conditions of Use</h1>
