--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<body onload="window.location.href = '#openModal';">
     <header class="header">
         <p class="slogan">Grow up and live new experiences</p>
 
@@ -12,14 +11,16 @@
         <span></span>
         <span></span>
       <ul id="menu">
+      <div class="borderburger">
+      </div>
         <li><a href="{{ path('home') }}"><img class="logoburger" src="{{ asset('build/images/logo.png') }}"></a></li>
+      <div class="borderburger2">{% if app.user %} {{app.user.name}} {% endif %}</div>
 
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/home.png') }}">Home</a></li>
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/social.png') }}">Social Networks</a></li>
           <li><a href="{{ path('cgu') }}"><img class="imgburger" src="{{ asset('build/images/parameter.png') }}">Settings</a></li>          
           <li><a href="https://neoma-bs.fr/" target="_blank"><img class="imgburger" src="{{ asset('build/images/more.png') }}">About us</a></li>
           <li>{% if app.user %}
-              {{ app.user.email }}
             <a href="{{ path('app_logout') }}"><img class="imgburger" src="{{ asset('build/images/logout.png') }}">Logout</a>
               {% else %}
             <a href="{{ path('app_login') }}"><img class="imgburger" src="{{ asset('build/images/logout.png') }}"> Login</a>
@@ -53,5 +54,4 @@
                 .addTo(map);
         {% endfor %}
     </script>
-</body>
 {% endblock %}
