--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
       <div class="borderburger">
       </div>
         <li><a href="{{ path('home') }}"><img class="logoburger" src="{{ asset('build/images/logo.png') }}"></a></li>
-      <div class="borderburger2">{% if app.user %}<img src="{{ asset('build/images/profil.jpg') }}" alt=""> {{app.user.name}} {% endif %}</div>
+      <div class="borderburger2">{% if app.user %}<img src="{{ asset('build/images/Massinta.jpeg') }}" alt=""> {{app.user.name}} {% endif %}</div>
 
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/home.png') }}">Home</a></li>
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/social.png') }}">Social Networks</a></li>
@@ -42,7 +42,7 @@
         {% for country in countries %}
 
             const country{{ country.id }} = L.marker([ {{country.latitude}},{{country.longitude}}])
-                .bindPopup("<b><a href=country/{{ country.id }}/><img class=image_popup src={{ country.image }}></a></b>")
+                .bindPopup("<b>{{ country.name}}<br><a href=country/{{ country.id }}/><img class=image_popup src={{ country.image }}></a></b>")
                 .addTo(map);
         {% endfor %}
         {% for university in universities %}
