--- a/templates/opinion/show.html.twig
+++ b/templates/opinion/show.html.twig
@@ -11,7 +11,7 @@
       <div class="borderburger">
       </div>
         <li><a href="{{ path('home') }}"><img class="logoburger" src="{{ asset('build/images/logo.png') }}"></a></li>
-      <div class="borderburger2">{% if app.user %} {{app.user.name}} {% endif %}</div>
+      <div class="borderburger2">{% if app.user %}<img src="{{ asset('build/images/Massinta.jpeg') }}" alt=""> {{app.user.name}} {% endif %}</div>
 
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/home.png') }}">Home</a></li>
           <li><a href="{{ path('home') }}"><img class="imgburger" src="{{ asset('build/images/social.png') }}">Social Networks</a></li>
@@ -30,7 +30,7 @@
 <h2>All the advices</h2>
     <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_advice.png') }}" />
 {% for opinion in opinions %}
-    <p><img class="massi" src="{{ asset('build/images/Massinta.jpeg') }}" alt="">{{ opinion.user.name }}  : "{{ opinion.advice }}"</p>
+    <p class="interview_text"><img class="massi" src="{{ asset('build/images/Massinta.jpeg') }}" alt="">{{ opinion.user.name }}  : "{{ opinion.advice }}"</p>
 {%  endfor %}
     <h2>All the interviews</h2>
     <img class="template_image" type="image/png" src="{{ asset('build/images/opinion_interview.png') }}" />
